--- a/gb/23/8/25/n14060845.md
+++ b/gb/23/8/25/n14060845.md
@@ -25,45 +25,38 @@
 <p>前美国缉毒局局长、美国海关和边境保护局首任专员、美国地区法官罗伯特·邦纳（Robert Bonner）介绍了毒品管制的起源、经验和教训。◇</p>
 <p>责任编辑：方平</p>
 	
-<hr>
-
-
 <strong>相关新闻：</strong>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/3/n14047478.md#1">遏制芬太尼危机 美国缉毒局开设边境实验室</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/10/n14051215.md#1">金县缴获200万剂致命芬太尼</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/16/n14055035.md#1">华人毒贩被判向芬太尼致死案家属 赔偿1800万</a></li>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/24/n14060019.md#1">西雅图警察局查获大量芬太尼毒品</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/21/n14121397.md#1">每日更新：装点节日气氛 给孩子一个惊喜</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/12/n14135076.md#1">羊毛衫不缩水不掉色 这种洗衣液是关键</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/10/n14133310.md#1">亚马逊8款热卖居家好物 可享受圣诞节折扣</a></li>
 <hr>
-
-
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank">不一样的海外校园</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/21/n11270152.md#1" target="_blank">中共暴政录：支持苏俄入侵中国的中东路事件</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/4/2/n11157870.md#1" target="_blank">中共强摘器官 芬兰议会九议员吁惩罚罪犯</a></li>
-<hr>
-
+<li><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank">大陆见不到的震撼场面</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/18/7/28/n10597749.md#1" target="_blank">林辉：因曾与美国上将同台 燕大教授一家凄惨</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/16/11/27/n8533466.md#1" target="_blank">一位医生太太见证医学无法达到的奇迹</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/20/n14057320.md#1">在高空目击UFO 美航空公司机长拍下画面</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/9/n14051156.md#1">带你认识六大茶系</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/8/n14049845.md#1">【古道人生】丈夫试测妻子是否忠心 结果酿成大祸</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/22/n14058703.md#1">二十四节气：秋天的第二个节气为何称“处暑”?</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/18/n14056411.md#1">七夕情话响千代  天神护祐得真福</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/24/n14060698.md#1">【菁英论坛】全球忧遭中共拖累 习隐身谋大清洗</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/23/n14059554.md#1">【中国禁闻】习意外缺席金砖峰会论坛 全球猜测</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/24/n14060539.md#1">【新闻大破解】中国经济倒退 美熊猫派路线结束</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/23/n14059514.md#1">习近平临时缺席金砖峰会论坛 引猜测</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/23/n14059468.md#1">中国经济陷困境 前中共政协委员不点名批习</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/23/n14059800.md#1">普里戈津乘坐的飞机失事 无人生还</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/22/n14059068.md#1">前央视名嘴崔永元摆摊卖字画 憔悴模样曝光</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/21/n14058450.md#1">《好声音》再被爆黑幕 潘玮柏椅子莫名自转身</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/22/n14059184.md#1">吴凤飞维也纳被拦下 秀中华民国护照秒通关</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/23/n14059682.md#1">帮AKIRA庆祝42岁 林志玲甜喊：Baby生日快乐</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/22/n14059041.md#1">“最美小龙女”李若彤57岁生日 推出人生首支歌</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/23/n14059503.md#1">不用除草剂 专家教你如何迅速除去杂草</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/22/n14058568.md#1">人在太空旅行中死亡 遗体应该如何处理？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/22/n14058691.md#1">为了能好好休息 登机后要问空服员这个问题</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/19/n14056838.md#1">贫血就喝这碗汤 2个食疗方让肠胃造出好血液</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/23/n14059650.md#1">抗氧化“水果皇后”荔枝 这样吃防过敏、中毒</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/5/n14129958.md#1">威赫西域的汉宣帝 一道柔情诏书显露夫妻的恩义</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/21/n14120907.md#1">【古道人生】结婚十年同寝只一月 夫妻终不能团圆</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/11/n14133709.md#1">【未解之谜】《推背图》47象 紫薇圣人</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/22/2/21/n13594978.md#1">【器乐独奏与协奏曲】布鲁赫《苏格兰幻想曲》，作品第46号</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/6/n14131208.md#1">莫愁女 诗歌里永不老去的佳人</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/15/n14137451.md#1">【马克时空】中共重金诱惑 想偷台湾CH-47</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/15/n14137471.md#1">【秦鹏观察】中南海祭出3大招 耶伦批北京胡来</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/15/n14137357.md#1">【舞蹈三剑客】2024神韵巡演在即 三剑客久违的Q&#038;A</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/14/n14136615.md#1">中共央视新闻播出辱习画面 后紧急删除</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/14/n14136580.md#1">北京地铁车厢断裂515人送医 近千人雪夜逃离</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/13/n14135801.md#1">周海媚死讯不断反转 堪称现实版《新闻女王》</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/14/n14136609.md#1">范冰冰竹林虎啸礼服入选CNN十大红毯造型</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/12/n14135089.md#1">港星周海媚在北京猝逝 旧爱吕良伟发文悼念</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/13/n14135870.md#1">10年前拍完未播 周海媚遗作遭拍卖原因曝光</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/14/n14136694.md#1">解约香港无线4个月 王晶之女王子涵曝新动向</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/21/n14121397.md#1">每日更新：装点节日气氛 给孩子一个惊喜</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/15/n14117110.md#1">FIJI天然自流瓶装水 不含8 种主要过敏原</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/12/n14135019.md#1">苹果防糖尿病、阻癌细胞扩散 品种、吃法全攻略</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/1/n14128227.md#1">掉发怎么办？中医6招教你长回浓密秀发</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/14/n14136611.md#1">已逝明星患的是终生疾病？关于红斑狼疮一篇看懂</a></li>
 <hr>
-
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/8/25/n14060845.htm">美缉毒局50周年新挑战：芬太尼致命危机</a></p><hr>
-
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/23/8/25/n14060845.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
